[package]
name = "notion_api"
version = "0.1.0"
authors = ["okawak"]
description = "Get page information using Notion API"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
governor = { version = "0.10", default-features = false, features = ["std"] }
thiserror = "2"
url = "2"
anyhow = "1"
